<resources>
    <string name="app_name">GroceryApp</string>
    <string name="user_login">User Login!</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_grocery_splash">GrocerySplash</string>
    <string name="get_your_grocery">Get Your Grocery..!</string>
    <string name="grocery_list">Grocery Details</string>
    <string name="grocery_id">Id</string>
    <string name="id">Id</string>
    <string name="add">Add</string>
    <string name="add_grocery">Add Grocery</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="update">Update</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="get_registered_here">Get Registered Here</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="swipe_right_for_login">Swipe Right For Login</string>
    <string name="get_your_grocery_here">Get Your Grocery Here</string>
    <string name="swipe_left_for_register">Swipe Left For Register</string>
    <string name="open_navigation">Open Navigation Drawer</string>
    <string name="close_navigation">Close Navigation Drawer</string>
</resources>
