<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_your_grocery"
        android:textAlignment="center"
        android:layout_margin="16dp"
        android:textSize="22dp"
        android:padding="8dp"
        android:textColor="@color/colorAccent"
        />
   <EditText
       android:id="@+id/mb_txt"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:ems="10"
       android:padding="8dp"
       android:layout_margin="16dp"
       android:hint="@string/mobile"
       android:inputType="number"
       />

    <EditText
        android:id="@+id/pwd_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="8dp"
        android:layout_margin="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="16dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        />

</LinearLayout>