<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddGrocery">

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/add_grocery"-->
        <!--android:textAlignment="center"-->
        <!--android:layout_margin="16dp"-->
        <!--android:textSize="22dp"-->
        <!--android:padding="8dp"-->
        <!--android:textColor="@color/colorAccent"-->
        <!--/>-->

    <EditText
        android:id="@+id/gr_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="8dp"
        android:layout_margin="16dp"
        android:hint="@string/id"
        android:inputType="text"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/gr_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="8dp"
        android:layout_margin="16dp"
        android:hint="@string/name"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/gr_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="8dp"
        android:layout_margin="16dp"
        android:hint="@string/quantity"
        android:inputType="text"
        />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="16dp"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:onClick="addItem"
        />
</LinearLayout>